cmake_minimum_required (VERSION 2.8) 
project (Control)
set(raspicam_DIR "/usr/local/lib/cmake")
find_package(raspicam REQUIRED)
find_package(OpenCV REQUIRED)
IF  ( OpenCV_FOUND AND raspicam_CV_FOUND)
MESSAGE(STATUS "COMPILING OPENCV TEST")
add_executable (control color_control.cpp)  
target_link_libraries (control ${raspicam_CV_LIBS} ${OpenCV_LIBS}  -lwiringPi  -lpthread)
ELSE()
MESSAGE(FATAL_ERROR "OPENCV NOT FOUND IN YOUR SYSTEM")
ENDIF()
